lab_3/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-app
spec:
  ingressClassName: nginx
  rules:
    - host: maltseva.com
      http:
        paths:
          - backend:
              service:
                name: lab3-app
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - maltseva.com
    secretName: lab3-tls
